# Shogi-NNUE

./: .gitignore  CMakeLists.txt  csa.txt
kernel/: adam.cl  nnue.cl
src/: adam.hpp  alpha_beta.hpp  csa.cpp  csa.h  engine.hpp  features.hpp  main.cpp  nnue.hpp  play.hpp  shogi.hpp  train.hpp
